 - Corrected page-selector widget operation.
 - BR #12647 Incorrect default-action value.
 - BR #12657 {content_module} tag property-collision.
 - BR #12660 output filter not working.
 - BR #12662 file picker does not filter archives properly.
 - Validate entered bookmark-URLs.
 - Include .phar files in executables test.
 - Deprecated use of PHP function umask().
 - Added missing nls files, allowing installation of extra translations.
 - Smarty upgraded to version 4.3.4.
 - Enabled use of PHP function rawurlencode in Smarty templates.
 - Added Smarty modifier plugin 'adjust' to handle deprecated modifier-function-calls in templates.
 - PHPMailer upgraded to version 6.7.1.
 - TinyMCE upgraded to version 4.9.11.
 - jQuery upgraded to version 1.12.4.
 - jQuery UI upgraded to version 1.12.1 (with previous styling).
 - jQuery migrate upgraded to version 1.4.1.

Admin theme
 - Corrected content scrolling

AdminSearch 1.0.7
 - Support exclusion of inactive pages from searches

CmsJobManager 0.1.4
 - BR #12629 - Add missing changelog and retriever

CMSMailer
 - Removed deprecated status

ContentManager 1.1.11
 - BR #12474 - Taking the default page down by accident through the content type
 - BR #12635 - Apply button is shown for non-existing page and creates new pages

DesignManager
 - Corrected new template creation

FileManager
 - BR #12535 - File Manager Unpack archive .tar.gz

FilePicker
 - BR #12621 - FilePicker upload bug
 - BR #12628 - Add missing changelog and retriever
 - Add missing ContentBlockField API methods

MenuManager 1.50.4
 - Exported from core to a normal CMSMS module in Forge
 - BR #12619 - Wrong assignment of $prevdepth.
 - BR #12620 - Version 2 breaks MenuManager with childrenof.

News
 - Sanitise news-item strings (title, summary, content) before display

Phar Installer 1.4
 - Added missing nls files, enabling installer sessions using extra translations
 - Install translation files (core, TinyMCE, PHPMailer) only for wanted translations